--- a/BoxModelTasks/SimplePhotoGallery.css
+++ b/BoxModelTasks/SimplePhotoGallery.css
@@ -8,7 +8,7 @@ img {
 .gallery-first-row {
 vertical-align: middle;
 border-witdh: 0.4rem;
-boder-color: black;
+border-color: black;
 border-style: solid;
 display: inline-block;
 }
@@ -16,7 +16,7 @@ display: inline-block;
 .gallery-second-row {
 vertical-align: middle;
 border-witdh: 0.4rem;
-boder-color: black;
+border-color: black;
 border-style: solid;
 display: inline-block;
 }
@@ -24,7 +24,7 @@ display: inline-block;
 .gallery-third-row {
 vertical-align: middle;
 border-witdh: 0.4rem;
-boder-color: black;
+border-color: black;
 border-style: solid;
 display: inline-block;
 }
@@ -32,7 +32,7 @@ display: inline-block;
 .gallery-forth-row {
 vertical-align: middle;
 border-witdh: 0.4rem;
-boder-color: black;
+border-color: black;
 border-style: solid;
 display: inline-block;
 }
